--- a/blocks/tiles/tiles.css
+++ b/blocks/tiles/tiles.css
@@ -201,7 +201,7 @@ a:any-link.factsheet-button {
   }
 
   .tile-all-image-variation {
-    padding: 68px 0;
+    padding: 34px 0;
   }
 
   .row.tiles-container {
